# diff

./: .gitignore  CONTRIBUTING.md  GITHUB_WORKFLOW_SUMMARY.md  LICENSE  MODERNIZATION_REPORT.md  PUBLISH_GUIDE.md  QUICK_RELEASE.txt  README.MD  README.md  TRUSTED_PUBLISHER_SETUP.md  deep_diff.py  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml  publish.yml  quality.yml
deep_diff/: __init__.py
tests/: __init__.py  test_deep_diff.py
